release/network/browser.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: browser-virtual-service
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - onlineboutique-gateway
  http:
    - match:
        - headers:
            user-agent:
              regex: '.*Firefox.*'
      route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v1
    - match:
        - headers:
            user-agent:
              regex: '.*Chrome.*'
      route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v2
