release/network/product-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-v2-timeout
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v2
    timeout: 3s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-rule
spec:
  host: productcatalogservice
  subsets:
  - name: v2
    labels:
      version: v2
